--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/AIPAmob.loader.js";
       var config = {
-        dataUrl: buildUrl + "/AIPAmob.data.gz",
-        frameworkUrl: buildUrl + "/AIPAmob.framework.js.gz",
-        codeUrl: buildUrl + "/AIPAmob.wasm.gz",
+        dataUrl: buildUrl + "/AIPAmob.data",
+        frameworkUrl: buildUrl + "/AIPAmob.framework.js",
+        codeUrl: buildUrl + "/AIPAmob.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "convAI portfolio",
